ncc/testsuite/negative/small-variant.n
variant Foo {
  | Bar         // OK
  | baz         // E: variant options' names must start with capital letter
}

